API Spec api-ngr-notify-1.0.0.yaml, Swagger UI