@@ -1,17 +1,23 @@
 import uk.gov.hmrc.DefaultBuildSettings
 
-ThisBuild / majorVersion := 0
-ThisBuild / scalaVersion := "2.13.16"
+val appName     = "ngr-notify-proto"
+val defaultPort = 1505
 
-lazy val microservice = Project("ngr-notify-proto", file("."))
-  .enablePlugins(play.sbt.PlayScala, SbtDistributablesPlugin)
+ThisBuild / majorVersion := 0
+ThisBuild / scalaVersion := "3.7.1"
+
+lazy val microservice = Project(appName, file("."))
+  .enablePlugins(PlayScala, SbtDistributablesPlugin)
   .settings(
     libraryDependencies ++= AppDependencies.compile ++ AppDependencies.test,
-    // https://www.scala-lang.org/2021/01/12/configuring-and-suppressing-warnings.html
-    // suppress warnings in generated routes files
-    scalacOptions += "-Wconf:src=routes/.*:s",
+    scalacOptions += "-Wconf:src=routes/:s",
+    scalacOptions += "-Wconf:msg=Flag .* set repeatedly:s",
+    scalacOptions += "-Wconf:msg=Implicit parameters should be provided with a \\`using\\` clause&src=views/:s",
+    scalacOptions += "-feature",
+    javaOptions += "-XX:+EnableDynamicAgentLoading",
+    PlayKeys.playDefaultPort := defaultPort
   )
-  .settings(CodeCoverageSettings.settings: _*)
+  .settings(CodeCoverageSettings.settings *)
 
 lazy val it = project
   .enablePlugins(PlayScala)
